@@ -53,3 +53,4 @@
 /fatal_police_shootings/add_column_public_id.sql
 /race_ethnicity/update_unknown_value_typo.sql
 /fatal_police_shootings/increase_column_name.sql
+/apha_racism_declarations/create.sql
